# deface

./: .buildinfo  .gitignore  README.md  api.html  changelog.html  cli.html  deface.html  design.html  genindex.html  index.html  install.html  motivation.html  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  run.py  search.html  searchindex.js
_sources/: api.rst.txt  changelog.rst.txt  deface.rst.txt  design.rst.txt  index.rst.txt  install.rst.txt
deface/: __init__.py  __main__.py  cli.py  error.py  ingest.py  json_data.py  json_io.py  jsonio.py  logger.py  model.py  serde.py  validator.py
docs/: Makefile  api.rst  changelog.rst  cli.rst  conf.py  deface.rst  design.rst  goals.rst  index.rst  install.rst  installation.rst  motivation.rst  testing.rst  use.rst
docs/sphinx_extensions/: github_link.py
tests/: test_ingest.py  test_ingest_post.py  test_json_io.py  test_model.py  test_serde.py
