[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deface"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Robert Grimm", email = "apparebit@gmail.com" }]
classifiers = ["License :: OSI Approved :: Apache Software License"]
urls = { Source = "https://github.com/apparebit/deface" }

# Build tool extracts description and version from package, reusing the value
# of top-level docstring and the __version__ variable.
dynamic = ['description', 'version']

# deface has no runtime dependencies beyond the Python standard library.
dependencies = []

[project.optional-dependencies]
test = ["mypy", "pytest"]
doc = [
  "furo",
  "sphinx",
  "sphinx-argparse-cli",
  "sphinxext-opengraph"
]

[project.scripts]
deface = "deface.cli:main"

[tool.mypy]
files = ["deface/**/*.py"]
disallow_any_unimported = true
disallow_any_decorated = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pyright]
include = ["deface", "tests"]
typeCheckingMode = 'strict'
