[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deface-social"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Robert Grimm", email = "apparebit@gmail.com" }]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Topic :: Text Processing",
  "Topic :: Utilities"
]

# Build tool extracts description and version from package, reusing the value
# of top-level docstring and the __version__ variable.
dynamic = ['description', 'version']

# deface has no runtime dependencies beyond the Python standard library.
dependencies = []

[tool.flit.module]
name = "deface"

[project.scripts]
deface = "deface.cli:main"

[project.optional-dependencies]
test = [
  "mypy",
  "pytest",
  "pytest-cov"
]

doc = [
  "furo",
  "sphinx",
  "sphinx-argparse-cli",
  "sphinxext-opengraph"
]

[project.urls]
Source = "https://github.com/apparebit/deface"
Documentation = "https://apparebit.github.io/deface/"
Changelog = "https://apparebit.github.io/deface/changelog.html"

[tool.mypy]
files = ["run.py", "deface/**/*.py"]
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
